docs: update README with philosophy section (KO/EN)